--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
 
     <color name="textColor">#ffffff</color>
     <color name="textColor2">#fdd4e0</color>
-    <color name="textcolor3">#444444</color>
+    <color name="textColor3">#444444</color>
+    <color name="textColor4">#000000</color>
 
     <color name="black">#000000</color>
 
