--- a/app/src/main/res/layout/item_favor_box.xml
+++ b/app/src/main/res/layout/item_favor_box.xml
@@ -59,7 +59,7 @@
             android:layout_marginRight="4dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/textcolor3" />
+            android:textColor="@color/textColor3" />
 
         <LinearLayout
             android:layout_width="match_parent"
