--- a/app/src/main/res/layout/widget_dyloading.xml
+++ b/app/src/main/res/layout/widget_dyloading.xml
@@ -3,15 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="14dp">
+    android:paddingBottom="12dp">
 
     <TextView
         android:id="@+id/dyload_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingTop="10dp"
-        android:text=" 加载中..." />
+        android:paddingTop="8dp"
+        android:text=" 加载中..."
+        android:textSize="13sp" />
 
     <Button
         android:id="@+id/dyload_button"
