--- a/app/src/main/res/layout/widget_reply_changemode.xml
+++ b/app/src/main/res/layout/widget_reply_changemode.xml
@@ -2,18 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="false"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/item_reply_sign"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:gravity="center_horizontal"
-        android:paddingBottom="6dp"
-        android:paddingTop="6dp"
-        android:text="——查看更多热门评论——"
+        android:paddingBottom="4dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
         android:textColor="@color/colorPrimaryDark" />
 </LinearLayout>
