缩小视频列表（收藏夹视频、推荐视频）项目之间的间距。。。开学前最后的挣扎。。

--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -90,8 +90,7 @@
             android:id="@+id/favv_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@color/alphe"
-            android:dividerHeight="2dp" />
+            android:divider="@null" />
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
 </RelativeLayout>
