--- a/app/src/main/res/layout/activity_otheruser.xml
+++ b/app/src/main/res/layout/activity_otheruser.xml
@@ -24,111 +24,25 @@
             android:id="@+id/ou_title_extraicon"
             android:layout_width="12dp"
             android:layout_height="19dp"
-            android:layout_marginLeft="2dp"
             android:layout_toLeftOf="@+id/ou_title_title"
             android:rotation="90"
             android:src="@drawable/icon_extra" />
 
+        <ImageView
+            android:id="@+id/ou_title_extraicon2"
+            android:layout_width="12dp"
+            android:layout_height="19dp"
+            android:layout_toRightOf="@+id/ou_title_title"
+            android:rotation="270"
+            android:src="@drawable/icon_extra" />
+
     </RelativeLayout>
 
-    <ScrollView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/ou_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/ou_title_layout">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="34dp">
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="5dp">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ou_head"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/img_default_avatar" />
-
-                <TextView
-                    android:id="@+id/ou_follow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_below="@+id/ou_head"
-                    android:layout_marginTop="1dp"
-                    android:background="@drawable/shape_anre_followbg"
-                    android:paddingBottom="4dp"
-                    android:paddingLeft="6dp"
-                    android:paddingRight="6dp"
-                    android:paddingTop="4dp"
-                    android:text="+关注"
-                    android:textColor="@color/textColor"
-                    android:textSize="13sp" />
-
-                <TextView
-                    android:id="@+id/ou_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_below="@+id/ou_head"
-                    android:layout_marginRight="2dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_toLeftOf="@+id/ou_follow"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/colorAccent"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/ou_lv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ou_name"
-                    android:layout_marginTop="2dp"
-                    android:background="@drawable/shape_lvbg_fme"
-                    android:paddingBottom="1dp"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingTop="1dp"
-                    android:textColor="@color/textColor3"
-                    android:textSize="9sp"
-                    android:textStyle="bold" />
-
-
-                <TextView
-                    android:id="@+id/ou_anth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ou_lv"
-                    android:layout_marginTop="2dp"
-                    android:textColor="@color/textColor3"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/ou_sign"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ou_anth"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/ou_other"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ou_sign"
-                    android:layout_marginTop="6dp" />
-
-            </RelativeLayout>
-        </RelativeLayout>
-    </ScrollView>
+        android:layout_below="@+id/ou_title_layout" />
 
     <LinearLayout
         android:id="@+id/ou_loading"
