增加动态点赞、评论赞/踩。。开学后的挣扎

--- a/app/src/main/res/layout/item_news_share_text.xml
+++ b/app/src/main/res/layout/item_news_share_text.xml
@@ -171,6 +171,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/list_likebu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -178,7 +179,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/list_likebu"
+                    android:id="@+id/list_likei"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_margin="3dp"
