--- a/app/src/main/res/layout/item_news_original_text.xml
+++ b/app/src/main/res/layout/item_news_original_text.xml
@@ -124,6 +124,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/liot_likebu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -131,7 +132,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/liot_likebu"
+                    android:id="@+id/liot_likei"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_margin="3dp"
