--- a/app/src/main/res/layout/item_news_original_video.xml
+++ b/app/src/main/res/layout/item_news_original_video.xml
@@ -90,6 +90,7 @@
             android:textSize="13sp" />
 
         <LinearLayout
+            android:id="@+id/liov_likebu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -101,7 +102,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/liov_likebu"
+                android:id="@+id/liov_likei"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:layout_margin="3dp"
