看动态和楼中楼的评论，不出意外就是1.4发行版了（别问我为什么没有1.2和1.3）

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="腕上哔哩"
+                android:text="腕上哔哩v1.4"
                 android:textStyle="bold" />
 
             <TextView
