修改了各种，不出意外这个才是1.4发行版了（别问我为什么没有1.2和1.3）

--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/qr_title_layout"
             android:gravity="center"
-            android:text="点击二维码在线观看"
+            android:text="  下一版本就更视频播放。。"
             android:textColor="@color/mainColor"
             android:textSize="12sp" />
 
