--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             android:paddingTop="4dp"
             android:text="账号密码登录 >"
             android:textColor="@color/textColor"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <RelativeLayout
             android:layout_width="match_parent"
