--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -42,6 +42,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="28dp"
             android:layout_marginRight="28dp"
-            android:layout_marginTop="6dp" />
+            android:layout_marginTop="6dp"
+            android:textSize="12sp"/>
     </LinearLayout>
 </ScrollView>
