--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,7 +10,9 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:divider="@color/alpha"
-        android:paddingBottom="22dp" />
+        android:paddingBottom="22dp" >
+
+    </ListView>
 
     <LinearLayout
         android:id="@+id/dl_nothing"
@@ -19,7 +22,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:layout_width="97dp"
@@ -33,5 +36,29 @@
             android:text="这里没有任何内容. . ."
             android:textSize="13sp" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/dl_tip_btu"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:src="@drawable/icon_dl_tip" />
+
+    <TextView
+        android:id="@+id/dl_tip"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#C000"
+        android:clickable="true"
+        android:paddingBottom="20dp"
+        android:paddingLeft="28dp"
+        android:paddingRight="28dp"
+        android:paddingTop="10dp"
+        android:textColor="@color/textColor"
+        android:textSize="12sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
