--- a/app/src/main/res/layout/viewpager_vd_vd.xml
+++ b/app/src/main/res/layout/viewpager_vd_vd.xml
@@ -58,22 +58,57 @@
                 android:textSize="13sp"
                 app:etv_MaxLinesOnShrink="5" />
 
-            <HorizontalScrollView
+            <LinearLayout
+                android:id="@+id/vd_video_part_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:paddingLeft="21dp"
-                android:paddingRight="21dp"
-                android:scrollbars="none">
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <LinearLayout
-                    android:id="@+id/vd_video_part"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:divider="@color/alpha"
-                    android:dividerPadding="4dp"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
+                    android:gravity="center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="16dp">
+
+                    <TextView
+                        android:id="@+id/vd_video_part_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/textColor3"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/vd_video_part_more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="clickMorePart"
+                        android:text="查看全部>"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:paddingLeft="21dp"
+                    android:paddingRight="21dp"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:id="@+id/vd_video_part"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:divider="@color/alpha"
+                        android:dividerPadding="4dp"
+                        android:orientation="horizontal" />
+                </HorizontalScrollView>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -439,4 +474,28 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/vd_vd_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/tipBG"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:text="  加载中..."
+            android:textColor="@color/textColor" />
+    </LinearLayout>
 </RelativeLayout>
