--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,12 +12,13 @@
 
     <color name="black">#000000</color>
     <color name="alpha">#00000000</color>
+    <color name="alpha_activity">#00fafafa</color>
 
     <color name="shareBG">#DADADA</color>
     <color name="shareBGs">#BBB</color>
     <color name="shareText">#126845</color>
 
-    <color name="activityBG">#fafafa</color>
+    <color name="activityBG">#fffafafa</color>
 
     <color name="tipBG">#88000000</color>
 </resources>
