--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,13 +26,13 @@
     <color name="ranking_rank_1_start">#88F2C056</color>
     <color name="ranking_rank_1_end">#00F2C056</color>
 
-    <color name="ranking_rank_2">#767668</color>
-    <color name="ranking_rank_2_start">#88767668</color>
-    <color name="ranking_rank_2_end">#00767668</color>
+    <color name="ranking_rank_2">#979780</color>
+    <color name="ranking_rank_2_start">#88979780</color>
+    <color name="ranking_rank_2_end">#00979780</color>
 
     <color name="ranking_rank_3">#BB7E50</color>
     <color name="ranking_rank_3_start">#88BB7E50</color>
     <color name="ranking_rank_3_end">#00BB7E50</color>
 
-    <color name="ranking_rank_other">#BBBBBB</color>
+    <color name="ranking_rank_other">#CCCCCC</color>
 </resources>
