--- a/app/src/main/res/layout/item_ranking_video.xml
+++ b/app/src/main/res/layout/item_ranking_video.xml
@@ -23,11 +23,11 @@
         <TextView
             android:id="@+id/rk_video_video_up_name"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="22dp"
             android:layout_marginLeft="3dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:textSize="13sp" />
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/rk_video_rank"
@@ -45,7 +45,6 @@
         android:layout_height="44dp"
         android:layout_below="@id/rk_video_video_up"
         android:layout_centerVertical="true"
-        android:layout_marginTop="2dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:src="@drawable/img_default_vid" />
@@ -56,6 +55,7 @@
         android:layout_below="@id/rk_video_video_up"
         android:layout_centerVertical="true"
         android:layout_marginLeft="3dp"
+        android:layout_marginTop="-2dp"
         android:layout_toRightOf="@+id/rk_video_video_img"
         android:orientation="vertical">
 
@@ -64,9 +64,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:lines="2"
             android:textColor="@color/textColor3"
-            android:textSize="13sp" />
+            android:textSize="12sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,7 +98,7 @@
             android:layout_marginBottom="2dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="10sp" />
+            android:textSize="9sp" />
 
     </LinearLayout>
 
