--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -35,10 +35,8 @@
             android:id="@+id/rk_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clipToPadding="false"
             android:divider="@color/alpha"
-            android:dividerHeight="0dp"
-            android:paddingBottom="22dp" />
+            android:dividerHeight="0dp"/>
     </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>
 
 </RelativeLayout>
